--- a/src/app/shared/ui/badge/badge.component.html
+++ b/src/app/shared/ui/badge/badge.component.html
@@ -2,5 +2,5 @@
   class="rounded-full inline-block text-center w-[110px] pb-[7px] pt-[5px]"
   [class]="variantClass"
 >
-  {{ textValue }}
+  <ng-content />
 </span>
