--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,1 +1,13 @@
-<p>navigation works!</p>
+<nav class="h-full pt-[27px] pb-[30px] w-[300px] fixed bg-white">
+  <h1 class="px-[30px] pb-[30px] cursor-pointer" routerLink="/app">
+    <svg-icon src="assets/icons/logo.svg" />
+  </h1>
+
+  <ul class="h-[calc(100svh-27px-64px-30px)] flex flex-col">
+    @for(item of items; track item) {
+    <app-navigation-item [item]="item" [class]="{ 'mt-auto': $last }" />
+    @if(item.line) {
+    <hr class="my-5 bg-greylight" />
+    } }
+  </ul>
+</nav>
