--- a/src/app/features/task/components/task-header/task-header.component.html
+++ b/src/app/features/task/components/task-header/task-header.component.html
@@ -1,7 +1,7 @@
 <header
-  class="px-[30px] pt-5 pb-2.5 bg-white border-l border-greylight space-y-5"
+  class="px-[30px] pt-5 pb-2.5 bg-white border-l border-ax-greylight space-y-5"
 >
-  <div class="flex items-center justify-between text-black">
+  <div class="flex items-center justify-between text-ax-black">
     <h2 class="text-[28px] font-semibold">Управление задачами</h2>
     <div class="space-x-2.5 flex items-center text-xl">
       <img src="assets/profile.png" alt="profile" />
@@ -11,7 +11,7 @@
 
   <div class="flex items-center justify-between">
     <div
-      class="border-2 border-greylight rounded-[10px] px-[30px] pt-2.5 pb-3 space-x-5 flex items-center focus-within:border-blue"
+      class="border-2 border-ax-greylight rounded-[10px] px-[30px] pt-2.5 pb-3 space-x-5 flex items-center focus-within:border-ax-blue"
     >
       <span>Сортировать по:</span>
       <app-select
