--- a/src/app/shared/ui/select/select.component.html
+++ b/src/app/shared/ui/select/select.component.html
@@ -20,7 +20,7 @@
 
   @if(isShow()) {
   <div
-    class="absolute right-0 z-10 mt-2 w-max origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
+    class="absolute right-0 z-10 mt-2 w-max origin-top-right rounded-md bg-white shadow-lg ring-1 ring-ax-black ring-opacity-5 focus:outline-none"
     role="menu"
     aria-orientation="vertical"
     aria-labelledby="menu-button"
@@ -30,7 +30,7 @@
       @for(item of options(); track item.value) {
       <button
         (click)="onStandaloneSelect(item)"
-        class="text-black hover:bg-blue/15 w-full text-left block px-4 py-2 text-sm transition-colors duration-200"
+        class="text-ax-black hover:bg-ax-blue/15 w-full text-left block px-4 py-2 text-sm transition-colors duration-200"
         role="menuitem"
         tabindex="-1"
       >
@@ -44,18 +44,19 @@
 } @else {
 <label class="mb-2" [for]="bind()">
   {{ label() }}@if(required()) {
-  <span class="text-blue">*</span>
+  <span class="text-ax-blue">*</span>
   }
 </label>
 
-<div class="relative">
+<div class="relative" [formGroup]="form()">
   <select
     [id]="bind()"
     [value]="value()"
     [required]="required()"
-    [disabled]="disabled()"
+    [formControlName]="controlName() || null"
+    [attr.disabled]="controlName() ? null : disabled()"
     (change)="onChange($event)"
-    class="appearance-none pr-6 cursor-pointer outline-none border-2 border-greylight px-5 py-2.5 rounded-[10px] focus:border-blue w-full"
+    class="appearance-none pr-6 cursor-pointer outline-none border-2 border-ax-greylight px-5 py-2.5 rounded-[10px] focus:border-ax-blue w-full disabled:bg-ax-greybg disabled:cursor-default"
   >
     @if(placeholder()) {
     <option selected disabled>{{ placeholder() }}</option>
