--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,13 +1,7 @@
-<main class="flex h-full">
+<main class="grid grid-cols-[300px_1fr] h-full">
   <app-navigation />
 
-  <div class="flex flex-col w-[calc(100%-300px)] ml-auto">
-    <app-header />
-
-    <section class="py-5 px-[30px] bg-greybg">
-      <div class="bg-white">
-        <router-outlet />
-      </div>
-    </section>
+  <div>
+    <router-outlet />
   </div>
 </main>
