--- a/src/app/layout/navigation/navigation-item/navigation-item.component.html
+++ b/src/app/layout/navigation/navigation-item/navigation-item.component.html
@@ -1,5 +1,5 @@
 <li
-  class="flex items-center px-[30px] py-5 cursor-pointer text-black border-l-4 border-transparent transition-colors duration-300 hover:text-[#4971FF]"
+  class="flex items-center px-[30px] py-5 cursor-pointer text-ax-black border-l-4 border-transparent transition-colors duration-300 hover:text-[#4971FF]"
   [routerLink]="item()?.route"
   routerLinkActive="text-[#4971FF] border-[#4971FF] bg-gradient-to-r from-[#4971FF]/10 to-[4971FF]/0"
 >
@@ -10,7 +10,7 @@
 
   @if(item()?.badge) {
   <span
-    class="bg-blue text-white rounded-full size-6 text-center flex-none ml-auto"
+    class="bg-ax-blue text-white rounded-full size-6 text-center flex-none ml-auto"
   >
     {{ item()?.badge }}
   </span>
