--- a/src/app/shared/ui/button/button.component.html
+++ b/src/app/shared/ui/button/button.component.html
@@ -1,7 +1,8 @@
 <button
-  class="h-[46px] rounded-[10px] px-[30px] pt-2 pb-2.5 flex items-center justify-center space-x-1.5 border-2 transition-colors duration-300 focus:text-white focus:bg-[#2B53E1] disabled:text-black disabled:bg-greybg disabled:cursor-not-allowed disabled:hover:bg-greybg disabled:hover:text-black"
+  class="h-[46px] rounded-[10px] px-[30px] pt-2 pb-2.5 flex items-center justify-center space-x-1.5 border-2 transition-colors duration-300 focus:text-white focus:bg-[#2B53E1] disabled:text-ax-black disabled:bg-ax-greybg disabled:cursor-not-allowed disabled:hover:bg-ax-greybg disabled:hover:text-ax-black"
   [class]="variantClass"
   [disabled]="disabled()"
+  (click)="onClick.emit()"
 >
   <ng-content />
 </button>
