--- a/src/app/features/task/components/task-list/task-list.component.html
+++ b/src/app/features/task/components/task-list/task-list.component.html
@@ -4,10 +4,10 @@
       <tr
         class="*:text-left *:uppercase *:font-normal *:py-2.5 border-b border-ax-greylight"
       >
-        <th class="pl-[30px] pr-10">Дата Создания</th>
-        <th class="pr-10">Исполнитель</th>
-        <th class="pr-10">Приоритет задачи</th>
-        <th class="pr-10">Название задачи</th>
+        <th class="pl-[30px] pr-2 xl:pr-10">Дата Создания</th>
+        <th class="pr-2 xl:pr-10">Исполнитель</th>
+        <th class="pr-2 xl:pr-10">Приоритет задачи</th>
+        <th class="pr-2 xl:pr-10">Название задачи</th>
         <th class="pr-[30px]">&nbsp;</th>
       </tr>
     </thead>
