--- a/src/app/features/task/components/task-item/task-item.component.html
+++ b/src/app/features/task/components/task-item/task-item.component.html
@@ -3,10 +3,10 @@
   class="hover:bg-ax-blue/10 transition-colors duration-200 border-b"
   [class]="isLast() ? 'border-transparent' : 'border-ax-greylight'"
 >
-  <td class="pl-[30px] py-3.5 align-middle pr-10 whitespace-nowrap">
+  <td class="pl-[30px] py-3.5 align-middle pr-2 xl:pr-10 whitespace-nowrap">
     {{ task()?.date | date : "dd MMMM yyyy" : undefined : "ru-RU" }}
   </td>
-  <td class="py-3.5 align-middle pr-10">
+  <td class="py-3.5 align-middle pr-2 xl:pr-10">
     <div class="flex items-center space-x-2.5">
       <img
         [src]="
@@ -20,12 +20,12 @@
       </p>
     </div>
   </td>
-  <td class="py-3.5 align-middle pr-10">
+  <td class="py-3.5 align-middle pr-2 xl:pr-10">
     <app-badge [variant]="(task()?.priority | badge) || ''">
       {{ task()?.priority }}
     </app-badge>
   </td>
-  <td class="py-3.5 align-middle pr-10">
+  <td class="py-3.5 align-middle pr-2 xl:pr-10">
     {{ task()?.title }}
   </td>
   <td class="pr-[30px] py-3.5 align-middle text-right">
