--- a/src/app/shared/ui/input/input.component.html
+++ b/src/app/shared/ui/input/input.component.html
@@ -84,6 +84,7 @@
     }
   </label>
   <button
+    tabindex="-1"
     (click)="iconClick.emit()"
     class="absolute right-0 top-1/2 -translate-x-1/2 -translate-y-1/2"
   >
