--- a/src/app/layout/components/navigation/navigation-item/navigation-item.component.html
+++ b/src/app/layout/components/navigation/navigation-item/navigation-item.component.html
@@ -1,7 +1,7 @@
 <li
   class="flex items-center px-[30px] py-5 cursor-pointer text-ax-black border-l-4 border-transparent transition-colors duration-300 hover:text-[#4971FF]"
   [routerLink]="item()?.route"
-  routerLinkActive="text-[#4971FF] border-[#4971FF] bg-gradient-to-r from-[#4971FF]/10 to-[4971FF]/0"
+  routerLinkActive="text-[#4971FF] !border-[#4971FF] bg-gradient-to-r from-[#4971FF]/10 to-[4971FF]/0"
 >
   <svg-icon [src]="item()?.icon || ''" class="mr-4" />
   <span class="whitespace-nowrap overflow-hidden text-ellipsis mr-4">
