--- a/src/app/shared/tech-pages/not-found/not-found.component.html
+++ b/src/app/shared/tech-pages/not-found/not-found.component.html
@@ -1,1 +1,38 @@
-<p>not-found works!</p>
+<div class="h-full flex items-center justify-center">
+  <div class="flex items-center flex-col xl:flex-row gap-4">
+    <div class="size-[300px]">
+      <svg-icon src="assets/icons/error-404.svg" svgClass="w-full h-full" />
+    </div>
+    <div class="max-w-[500px] space-y-4 px-3">
+      <h2 class="text-ax-black text-[28px] font-semibold">
+        Страница не найдена
+      </h2>
+
+      <p>
+        К сожалению, запрашиваемая вами страница не найдена. Пожалуйста,
+        проверьте URL-адрес и попробуйте снова.
+      </p>
+
+      <div class="space-y-1">
+        <p>Возможно вы искали:</p>
+        <ul
+          class="list-disc pl-5 space-x-4 gap-3 flex flex-wrap *:cursor-pointer *:pb-px *:border-b *:border-transparent *:transition-colors"
+        >
+          <li class="hover:border-ax-blue" [routerLink]="['/app/tasks']">
+            Задачи
+          </li>
+          <li class="hover:border-ax-blue" [routerLink]="['/app/calendar']">
+            Календарь
+          </li>
+          <li class="hover:border-ax-blue" [routerLink]="['/app/team']">
+            Команды
+          </li>
+        </ul>
+      </div>
+
+      <div>
+        <app-button link="/app"> Вернуться на главную </app-button>
+      </div>
+    </div>
+  </div>
+</div>
