--- a/src/app/shared/tech-pages/soon/soon.component.html
+++ b/src/app/shared/tech-pages/soon/soon.component.html
@@ -1,3 +1,10 @@
-<div class="bg-slate-800">
-  <h2>SOON</h2>
+<div class="h-full flex items-center justify-center">
+  <div>
+    <h2 class="text-ax-black text-center text-[28px] font-semibold">
+      Coming Soon...
+    </h2>
+    <div class="size-[300px]">
+      <svg-icon src="assets/icons/soon.svg" svgClass="w-full h-full" />
+    </div>
+  </div>
 </div>
