--- a/src/app/shared/ui/button/button.component.html
+++ b/src/app/shared/ui/button/button.component.html
@@ -1,8 +1,22 @@
+@if(link()) {
+<button
+  class="h-[46px] w-full rounded-[10px] px-[30px] pt-2 pb-2.5 flex items-center justify-center space-x-1.5 border-2 transition-colors duration-300 focus:text-white focus:bg-[#2B53E1] disabled:text-ax-black disabled:bg-ax-greybg disabled:cursor-not-allowed disabled:hover:bg-ax-greybg disabled:hover:text-ax-black"
+  [class]="variantClass"
+  [disabled]="disabled()"
+  (click)="onClick.emit()"
+  [routerLink]="[link()]"
+>
+  <ng-container *ngTemplateOutlet="content" />
+</button>
+} @else {
 <button
   class="h-[46px] w-full rounded-[10px] px-[30px] pt-2 pb-2.5 flex items-center justify-center space-x-1.5 border-2 transition-colors duration-300 focus:text-white focus:bg-[#2B53E1] disabled:text-ax-black disabled:bg-ax-greybg disabled:cursor-not-allowed disabled:hover:bg-ax-greybg disabled:hover:text-ax-black"
   [class]="variantClass"
   [disabled]="disabled()"
   (click)="onClick.emit()"
 >
-  <ng-content />
+  <ng-container *ngTemplateOutlet="content" />
 </button>
+}
+
+<ng-template #content> <ng-content /> </ng-template>
